[project]
name = "charts-server"
version = "0.1.0"
description = "Aviation Charts Server with MapProxy and MapServer"
requires-python = ">=3.12"
dependencies = [
    "mapproxy>=2.0.2",
    "gunicorn>=23.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
