[project]
name = "faa-chart-system"
version = "1.0.0"
description = "FAA Chart Download and Processing System"
requires-python = ">=3.8,<3.14"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "numpy>=1.21.0",
    "Pillow>=9.0.0",
    "pyproj>=3.3.0",
    "simplekml>=1.3.0",
    "python-dotenv>=0.19.0",
    "gunicorn>=20.0.4",
    "mapproxy>=2.0.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["download_charts"]

[dependency-groups]
dev = ["pytest>=7.0.0", "black>=22.0.0", "ruff>=0.1.0"]
